samples/_failures_safe/1761422327_250530_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ffdd88d2.c: In function ‘process_command’:
./samples/SAFE/__tmp_ffdd88d2.c:157:13: error: expected declaration or statement at end of input
  157 |             sm->current_state = INIT;
      |             ^~
./samples/SAFE/__tmp_ffdd88d2.c:157:13: error: expected declaration or statement at end of input
